# TALKERPDF

./: .gitignore  DEBUGGING_SUMMARY.md  FIX_CHROMADB_METADATA.md  README.md  pyproject.toml  requirements.txt  test_groq_vision.py  test_vision_support.py
.streamlit/: secrets.toml.example
app/: ui.py
config/: settings.py
core/: chroma_client.py  generation.py  ingestion.py  ingestion.py.backup  retrieval.py
data/chroma_db.backup_20251221_090352/: chroma.sqlite3
test/: evaluate.py
