[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talkerpdf"
version = "0.1.0"
description = "A powerful Retrieval-Augmented Generation (RAG) application that allows users to chat with their PDF documents using advanced AI models."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Shubham Kumar", email = "shubham@example.com"},
]
maintainers = [
    {name = "Shubham Kumar", email = "shubham@example.com"},
]
keywords = ["rag", "pdf", "chatbot", "ai", "streamlit", "chromadb", "groq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Framework :: Streamlit",
]
dependencies = [
    "streamlit>=1.28.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pymupdf>=1.23.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "numpy>=1.21.0",
    "flashrank>=0.1.0",
    "rank-bm25>=0.2.0",
    "Pillow>=9.0.0",
    "pdf2image>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/shubham-kr2002/TALKERPDF"
Repository = "https://github.com/shubham-kr2002/TALKERPDF"
Issues = "https://github.com/shubham-kr2002/TALKERPDF/issues"
Documentation = "https://github.com/shubham-kr2002/TALKERPDF#readme"
Changelog = "https://github.com/shubham-kr2002/TALKERPDF/blob/main/CHANGELOG.md"

[project.scripts]
talkerpdf = "app.ui:main"

[tool.setuptools]
packages = ["app", "core", "config", "test"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.toml"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app", "core", "config", "test"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "sentence_transformers.*",
    "pymupdf.*",
    "flashrank.*",
    "rank_bm25.*",
    "pdf2image.*",
]
ignore_missing_imports = true